# game-of-life

./: CMakeLists.txt  README.md  ametrine.h  elements.h  main.c  main.cpp
elements/: Element.h
resources/shaders/: default.frag  default.vert
shaders/: default.vert
